tests/ok/alloc_directive_basic.cz
// Test #alloc directive

#alloc cz.alloc.default

struct Person {
    i32 age
}

fn main() i32 {
    Person? p = new Person { age: 42 }
    #defer free p

    return p.age - 42
}
