tests/fail/interface_missing_field.cz
// Test interface field requirement - missing field should error

iface HasName {
    char? name
}

struct Person : HasName {
    i32 age
}

fn main() i32 {
    return 0
}
